chandeliers-lus/tests/compile_fail/ui/tc/when-on-const.rs
//! Can't use `when` on a constant.
chandeliers_lus::decl! {
    const X : int when b = 0;
}

fn main() {}
