chandeliers-lus/tests/compile_fail/ui/tc/when-on-const.stderr
error: expected `=`
 --> tests/compile_fail/ui/tc/when-on-const.rs:2:19
  |
2 |     const X : int when b = 0;
  |                   ^^^^
